edit key / fix ajax requests for add - edit key

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -81,6 +81,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="key-item-element.html">
 <link rel="import" href="key-page-element.html">
 <link rel="import" href="key-add-element.html">
+<link rel="import" href="key-edit-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
