--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -32,6 +32,11 @@
             - Set up upload key file
             - Set up iron-ajax request for save
             - Send the new key to keys list
+            - Check name validation
+
+            #### Edit Key
+            - Set up ajax request
+            - Check name validation
 
             #### Plans
             - Change the layout
