scripts list / add script basic set up / edit script set up

--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Keys List</span>
           </a>
 
+          <a data-route="scripts" href="/scripts">
+            <iron-icon icon="receipt"></iron-icon>
+            <span>Scripts List</span>
+          </a>
+
           <a data-route="key" href="/keys/1">
             <iron-icon icon="communication:vpn-key"></iron-icon>
             <span>Single Key</span>
@@ -427,6 +432,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <keys-list-element data-route="keys"></keys-list-element>
 
             <key-page-element data-route="key"></key-page-element>
+
+            <scripts-list-element data-route="scripts"></scripts-list-element>
 
             <login-element data-route="login"></login-element>
 
