--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -82,6 +82,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="key-page-element.html">
 <link rel="import" href="key-add-element.html">
 <link rel="import" href="key-edit-element.html">
+<link rel="import" href="scripts-list-element.html">
+<link rel="import" href="script-item-element.html">
+<link rel="import" href="script-run-element.html">
+<link rel="import" href="script-add-element.html">
+<link rel="import" href="script-edit-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
