--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -79,8 +79,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.params = data.params;
     });
 
-    page('/add-key', function() {
-      app.route = 'add-key';
+    page('/scripts', function() {
+      app.route = 'scripts';
     });
 
     page('/login', function() {
