--- a/app/elements/styling-quests-page-element.html
+++ b/app/elements/styling-quests-page-element.html
@@ -60,6 +60,9 @@
 
             #### Tables styling
             We need zebra styling for tables and border bottom except for the last one with css and not by using js and arrays indexes to find odd and even rows.
+
+            #### Preloader position / styling
+            One important thing for our ajax requests is to provide a nice loading indication while ajax requests run or some heavy process takes place. Polymer offers some options by default to do so. We should think about it some more so we can apply a consistent solution.
           </script>
         </marked-element>
       </div>
