--- a/app/elements/session-item-element.html
+++ b/app/elements/session-item-element.html
@@ -40,13 +40,13 @@
 
     <paper-item on-tap="_expandSession" class$="info-item flex-horizontal-with-ratios session-item [[indexClass]]">
       <div class="flexchild">
-        <paper-checkbox disabled$="[[isActive]]" on-tap="_selectSession">[[createdTimeText]]</paper-checkbox>
+        <paper-checkbox checked="{{selected}}" disabled$="[[isActive]]" on-tap="_selectSession">[[createdTimeText]]</paper-checkbox>
       </div>
       <div class="flexchild">[[accessedTimeText]]</div>
       <div class="flexchild text-center">
         <span class="session-active" hidden$="[[!isActive]]">Current Session</span>
         <span class="session-action" hidden$="[[isActive]]">
-          <paper-button disabled$="[[deletingSession]]" class="revoke" raised on-tap="_revokeSession">Terminate</paper-button>
+          <paper-button disabled$="[[deletingSession]]" class="revoke" raised on-tap="_terminateSession">Terminate</paper-button>
         </span>
       </div>
       <div class="flexchild text-right">
@@ -70,7 +70,7 @@
       </div>
     </iron-collapse>
 
-    <iron-ajax id="revokeSessionAjax" url="/sessions/[[session.id]]" method="DELETE" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
+    <iron-ajax id="terminateSessionAjax" url="/sessions/[[session.id]]" method="DELETE" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
   </template>
 
   <script>
@@ -83,6 +83,11 @@
         properties: {
           session: {
             type: Object
+          },
+          selected: {
+            type: Boolean,
+            value: false,
+            notify: true
           },
           index: {
             type: Number
@@ -115,12 +120,29 @@
             value: false
           }
         },
+        listeners: {
+          'selected-changed': '_selectSessionChanged'
+        },
         ready: function() {
 
         },
+        _selectSessionChanged: function(e) {
+          if (!this.isActive) {
+            var selected = e.detail.value;
+            this.fire('toggleSelectedSession', {
+              session: this.session,
+              selected: selected
+            });
+          } else {
+            this.set('selected', false);
+          }
+        },
         _computeIsIndexClass: function(index, count) {
           var classes = [];
-          classes.push(index % 2 != 0 ? 'even' : 'odd', index + 1 == count ? 'last' : null);
+          classes.push(
+            (index + 1) % 2 == 0 ? 'even' : 'odd',
+            index + 1 == count ? 'last' : null
+          );
           return classes.join(' ');
         },
         _computeCreatedTimeText: function(createdAt) {
@@ -141,16 +163,21 @@
           this.$.collapse.toggle();
           this.set('isOpen', !this.isOpen);
         },
-        _revokeSession: function(e) {
+        _terminateSession: function(e) {
           e.stopPropagation();
-          //   this.$.revokeSessionAjax.generateRequest();
+          this.fire('terminateSession', {
+            session: this.session,
+            selected: this.selected
+          });
+          //   this.$.terminateSessionAjax.generateRequest();
         },
         _ajaxRequest: function(e) {
           this.set('sendingData', true);
         },
         _ajaxResponse: function(e) {
-          this.fire('revokeSession', {
-            session: this.session
+          this.fire('terminateSession', {
+            session: this.session,
+            selected: this.selected
           });
           this.set('sendingData', false);
         }
