fix add script dynamic form fields

--- a/app/index.html
+++ b/app/index.html
@@ -431,7 +431,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <keys-list-element data-route="keys"></keys-list-element>
 
-            <key-page-element data-route="key"></key-page-element>
+            <key-page-element data-route="key" params="[[params]]"></key-page-element>
 
             <scripts-list-element data-route="scripts"></scripts-list-element>
 
