--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -50,15 +50,35 @@
         color: #fff;
         cursor: not-allowed;
       }
+
+      paper-dropdown-menu {
+        display: block;
+      }
     </style>
 
     <paper-dialog id="addScriptModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Add Script</h2>
       <paper-icon-button icon="clear" on-tap="_closeAddScriptModal"></paper-icon-button>
       <paper-dialog-scrollable>
-        <paper-input id="name" label="Name" required error-message="Please enter script's name" value="{{script.name}}"></paper-input>
+        <template is="dom-repeat" items="[[fields]]" as="field">
+          <template is="dom-if" if="[[_computeIsInputText(field.type)]]">
+            <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.defaultValue}}" required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
+          </template>
 
-        <paper-textarea id="description" label="Description" rows="5" required error-message="Please enter script's description" value="{{script.description}}" max-rows="5"></paper-textarea>
+          <template is="dom-if" if="[[_computeIsInputTextarea(field.type)]]">
+            <paper-textarea id="[[field.name]]" label="[[field.label]]" rows="5" max-rows="5" value="{{field.defaultValue}}" required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-textarea>
+          </template>
+
+          <template is="dom-if" if="[[_computeIsDropdown(field.type)]]">
+            <paper-dropdown-menu label="[[field.label]]" horizontal-align="left">
+              <paper-menu attr-for-selected="value" class="dropdown-content">
+                <template is="dom-repeat" items="[[field.options]]" as="option">
+                  <paper-item value="[[option.val]]">[[option.title]]</paper-item>
+                </template>
+              </paper-menu>
+            </paper-dropdown-menu>
+          </template>
+        </template>
 
         <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
       </paper-dialog-scrollable>
@@ -84,6 +104,12 @@
               }
             },
             notify: true
+          },
+          fields: {
+            type: Array,
+            value: function() {
+              return SCRIPT_FORM_FIELDS;
+            }
           },
           sendingData: {
             type: Boolean,
@@ -112,6 +138,16 @@
           }
 
           return formReady;
+        },
+        _computeIsInputText: function(type) {
+          console.log(type);
+          return type == "text";
+        },
+        _computeIsInputTextarea: function(type) {
+          return type == "textarea";
+        },
+        _computeIsDropdown: function(type) {
+          return type == "dropdown";
         },
         _openAddScriptModal: function(e) {
           this.$.addScriptModal.open();
