networks list / item layouts

--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -25,7 +25,7 @@
 
             #### Keys List
             - Sort by `isDefault`
-            - Provide sort by name option
+            - Provide sorting by name option
             - Bind to single key page (test animations here)
 
             #### Add Key
@@ -35,16 +35,16 @@
             - Check name validation
 
             #### Edit Key
-            - Set up ajax request
             - Check name validation
+
+            #### Scripts List
+            - Sorting
+            - Bind to single key page (test animations here)
 
             #### Plans
             - Change the layout
             - Apply a different if...else logic in the template
             - Remove jQuery logic in the forms handlers
-
-            #### Sessions
-            - Use all functionality from tokens
 
             #### Add Token
             - Finish all forms handling
