--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -83,6 +83,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'scripts';
     });
 
+    page('/networks', function() {
+      app.route = 'networks';
+    });
+
     page('/login', function() {
       app.route = 'login';
     });
