--- a/app/index.html
+++ b/app/index.html
@@ -283,7 +283,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </a>
 
           <a data-route="networks" href="/networks">
-            <iron-icon icon="receipt"></iron-icon>
+            <iron-icon icon="hardware:device-hub"></iron-icon>
             <span>Networks List</span>
           </a>
 
