--- a/app/elements/network-item-element.html
+++ b/app/elements/network-item-element.html
@@ -27,9 +27,10 @@
 
     <paper-item on-tap="_viewNetwork" class="info-item flex-horizontal-with-ratios">
       <div class="flexchild">
-        <paper-checkbox checked="{{selected}}" on-tap="_selectNetwork">[[network.id]]</paper-checkbox>
+        <paper-checkbox checked="{{selected}}" disabled$="[[!isOpenstack]]" on-tap="_selectNetwork">[[network.name]]</paper-checkbox>
       </div>
-      <div class="flexchild">[[isDefaultText]]</div>
+      <div class="flexchild">[[network.name]]</div>
+      <div class="flexchild">[[network.cloud.title]]</div>
     </paper-item>
   </template>
 
@@ -49,9 +50,9 @@
             value: false,
             notify: true
           },
-          isDefaultText: {
-            type: String,
-            computed: '_computeIsDefaultText(network.isDefault)'
+          isOpenstack: {
+            type: Boolean,
+            computed: '_computeIsOpenstack(network.cloud.provider)'
           }
         },
         listeners: {
@@ -59,6 +60,9 @@
         },
         ready: function() {
 
+        },
+        _computeIsOpenstack: function(provider) {
+          return provider == 'openstack';
         },
         _selectNetworkChanged: function(e) {
           var selected = e.detail.value;
@@ -73,9 +77,6 @@
         _selectNetwork: function(e) {
           // This is used to prevent event bubbling
           e.stopPropagation();
-        },
-        _computeIsDefaultText: function(isDefault) {
-          return isDefault ? 'Default' : null;
         }
       });
     })();
