add network layout / add script move to full page / networks list funcs

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -89,6 +89,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="script-edit-element.html">
 <link rel="import" href="networks-list-element.html">
 <link rel="import" href="network-item-element.html">
+<link rel="import" href="network-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
