--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -12,40 +12,13 @@
         display: block;
       }
 
-      .btn-group paper-button {
-        width: 50%;
-        float: left;
-        display: block;
-      }
-
-      .btn-group paper-button:first-of-type {
-        border-radius: 3px 0 0 3px;
-      }
-
-      .btn-group paper-button:last-of-type {
-        border-radius: 0 3px 3px 0;
-      }
-
-      paper-dialog {
-        width: 100%;
-        max-width: 800px;
-      }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
+      paper-button {
         margin: 20px 0 0;
         background-color: #3f51b5;
         color: #fff;
       }
 
-      paper-dialog paper-button[disabled] {
+      paper-button[disabled] {
         background-color: #ccc;
         color: #fff;
         cursor: not-allowed;
@@ -56,10 +29,8 @@
       }
     </style>
 
-    <paper-dialog id="addScriptModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
-      <h2>Add Script</h2>
-      <paper-icon-button icon="clear" on-tap="_closeAddScriptModal"></paper-icon-button>
-      <paper-dialog-scrollable>
+    <paper-card heading="Add Script">
+      <div class="card-content">
         <template is="dom-repeat" items="[[fields]]" as="field">
           <template is="dom-if" if="[[_computeIsInputText(field.type)]]">
             <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.defaultValue}}" required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
@@ -103,8 +74,8 @@
         </template>
 
         <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
-      </paper-dialog-scrollable>
-    </paper-dialog>
+      </div>
+    </paper-card>
 
     <iron-ajax id="addScriptAjax" url="/scripts" method="POST" on-request="_addScriptAjaxRequest" on-response="_addScriptAjaxResponse"></iron-ajax>
   </template>
@@ -142,9 +113,6 @@
             computed: '_computeFormReady(script.name, sendingData)'
           }
         },
-        listeners: {
-          'iron-overlay-closed': '_modalClosed'
-        },
         ready: function() {
 
         },
@@ -175,15 +143,6 @@
         },
         _computeHasOptional: function(optional) {
           return optional && optional.length;
-        },
-        _openAddScriptModal: function(e) {
-          this.$.addScriptModal.open();
-        },
-        _closeAddScriptModal: function(e) {
-          this.$.addScriptModal.close();
-        },
-        _modalClosed: function() {
-          this._formReset();
         },
         _formReset: function() {
           this.set('script.name', '');
